--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
       <link rel="preload" href="fonts/Montserrat-SemiBold.woff2" as="font">
       <link rel="preload" href="fonts/Montserrat-Regular.woff2" as="font">
       <title>Главная</title>
+
+      <template id="fav-button">
+        <button class="product__favourite fav-add" type="button" aria-label="Добавить в избранное">
+          <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M3 7C3 13 10 16.5 11 17C12 16.5 19 13 19 7C19 4.79086 17.2091 3 15 3C12 3 11 5 11 5C11 5 10 3 7 3C4.79086 3 3 4.79086 3 7Z" stroke="white" stroke-width="2" stroke-linejoin="round"></path>
+          </svg>
+        </button>
+      </template>
     </head>
 
     <body>
