--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                             <label for="sort-cheap">Дешёвые</label>
                           </li>
                           <li class="sorting__order-tab">
-                            <input class="visually-hidden" type="radio" name="sorting-order" value="cheap" id="sort-new">
+                            <input class="visually-hidden" type="radio" name="sorting-order" value="new" id="sort-new">
                             <label for="sort-new">Новые</label>
                           </li>
                         </ul>
