Begin working on collecting filters

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                         <label for="flat">Квартира</label>
                       </li>
                       <li class="filter__checkboxes-item">
-                        <input class="visually-hidden" type="checkbox" name="estate-type" value="apartments" id="apartments">
-                        <label for="apartments">Апартаменты</label>
+                        <input class="visually-hidden" type="checkbox" name="estate-type" value="apartment" id="apartment">
+                        <label for="apartment">Апартаменты</label>
                       </li>
                     </ul>
                   </fieldset>
@@ -85,23 +85,23 @@
                         <label for="any_room">Любое</label>
                       </li>
                       <li class="filter__radiobuttons-item">
-                        <input class="visually-hidden" type="radio" name="rooms" value="one" id="one">
+                        <input class="visually-hidden" type="radio" name="rooms" value="1" id="one">
                         <label for="one">1</label>
                       </li>
                       <li class="filter__radiobuttons-item">
-                        <input class="visually-hidden" type="radio" name="rooms" value="two" id="two">
+                        <input class="visually-hidden" type="radio" name="rooms" value="2" id="two">
                         <label for="two">2</label>
                       </li>
                       <li class="filter__radiobuttons-item">
-                        <input class="visually-hidden" type="radio" name="rooms" value="three" id="three">
+                        <input class="visually-hidden" type="radio" name="rooms" value="3" id="three">
                         <label for="three">3</label>
                       </li>
                       <li class="filter__radiobuttons-item">
-                        <input class="visually-hidden" type="radio" name="rooms" value="four" id="four">
+                        <input class="visually-hidden" type="radio" name="rooms" value="4" id="four">
                         <label for="four">4</label>
                       </li>
                       <li class="filter__radiobuttons-item">
-                        <input class="visually-hidden" type="radio" name="rooms" value="fivemore" id="fivemore">
+                        <input class="visually-hidden" type="radio" name="rooms" value="5+" id="fivemore">
                         <label for="fivemore">5+</label>
                       </li>
                     </ul>
@@ -112,7 +112,7 @@
                     <legend>Тип фотоаппарата</legend>
                     <ul class="filter__checkboxes-list filter__checkboxes-list--camera">
                       <li class="filter__checkboxes-item">
-                        <input class="visually-hidden" type="checkbox" name="camera-type" value="mirror" id="mirror">
+                        <input class="visually-hidden" type="checkbox" name="camera-type" value="slr" id="mirror">
                         <label for="mirror">Зеркальный</label>
                       </li>
                       <li class="filter__checkboxes-item">
@@ -142,10 +142,10 @@
                     <label for="resolution-video">Минимальное разрешение видео</label>
                     <select id="resolution-video" name="resolution-video">
                       <option value="any" selected>Любое</option>
-                      <option value="HD">HD</option>
-                      <option value="Full_HD">Full HD</option>
-                      <option value="4K">4K</option>
-                      <option value="5K">5K</option>
+                      <option value="hd">HD</option>
+                      <option value="full-hd">Full HD</option>
+                      <option value="4k">4K</option>
+                      <option value="5k">5K</option>
                     </select>
                     <svg width="14" height="8" viewBox="0 0 14 8" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M0.292893 0.292893C0.683417 -0.0976311 1.31658 -0.0976311 1.70711 0.292893L7 5.58579L12.2929 0.292893C12.6834 -0.0976311 13.3166 -0.0976311 13.7071 0.292893C14.0976 0.683417 14.0976 1.31658 13.7071 1.70711L7.70711 7.70711C7.31658 8.09763 6.68342 8.09763 6.29289 7.70711L0.292893 1.70711C-0.0976311 1.31658 -0.0976311 0.683417 0.292893 0.292893Z" />
@@ -157,7 +157,7 @@
                     <legend>Тип ноутбука</legend>
                     <ul class="filter__checkboxes-list filter__checkboxes-list--laptop-ram">
                       <li class="filter__checkboxes-item">
-                        <input class="visually-hidden" type="checkbox" name="laptop-type" value="ultra" id="ultra">
+                        <input class="visually-hidden" type="checkbox" name="laptop-type" value="ultrabook" id="ultrabook">
                         <label for="ultra">Ультрабук</label>
                       </li>
                       <li class="filter__checkboxes-item">
@@ -178,15 +178,15 @@
                           <label for="any_ram">Любой</label>
                         </li>
                         <li class="filter__radiobuttons-item">
-                          <input class="visually-hidden" type="radio" name="ram" value="4gb" id="4gb">
+                          <input class="visually-hidden" type="radio" name="ram" value="4" id="4gb">
                           <label for="4gb">4 Гб</label>
                         </li>
                         <li class="filter__radiobuttons-item">
-                          <input class="visually-hidden" type="radio" name="ram" value="8gb" id="8gb">
+                          <input class="visually-hidden" type="radio" name="ram" value="8" id="8gb">
                           <label for="8gb">8 Гб</label>
                         </li>
                         <li class="filter__radiobuttons-item">
-                          <input class="visually-hidden" type="radio" name="ram" value="16gb" id="16gb">
+                          <input class="visually-hidden" type="radio" name="ram" value="16" id="16gb">
                           <label for="16gb">16 Гб</label>
                         </li>
                       </ul>
@@ -199,19 +199,19 @@
                           <label for="any_diagonal">Любая</label>
                         </li>
                         <li class="filter__radiobuttons-item">
-                          <input class="visually-hidden" type="radio" name="diagonal" value="13in" id="13in">
+                          <input class="visually-hidden" type="radio" name="diagonal" value="13" id="13in">
                           <label for="13in">13<sup>″</sup></label>
                         </li>
                         <li class="filter__radiobuttons-item">
-                          <input class="visually-hidden" type="radio" name="diagonal" value="14in" id="14in">
+                          <input class="visually-hidden" type="radio" name="diagonal" value="14" id="14in">
                           <label for="14in">14<sup>″</sup></label>
                         </li>
                         <li class="filter__radiobuttons-item">
-                          <input class="visually-hidden" type="radio" name="diagonal" value="15in" id="15in">
+                          <input class="visually-hidden" type="radio" name="diagonal" value="15" id="15in">
                           <label for="15in">15<sup>″</sup></label>
                         </li>
                         <li class="filter__radiobuttons-item">
-                          <input class="visually-hidden" type="radio" name="diagonal" value="17in" id="17in">
+                          <input class="visually-hidden" type="radio" name="diagonal" value="17" id="17in">
                           <label for="17in">17<sup>″</sup></label>
                         </li>
                       </ul>
@@ -281,7 +281,7 @@
                           <label for="hatchback">Хэтчбэк</label>
                         </li>
                         <li class="filter__checkboxes-item">
-                          <input class="visually-hidden" type="checkbox" name="car-body" value="jeep" id="jeep">
+                          <input class="visually-hidden" type="checkbox" name="car-body" value="suv" id="suv">
                           <label for="jeep">Внедорожник</label>
                         </li>
                         <li class="filter__checkboxes-item">
